2002-08-28  Fred Kiefer <FredKiefer@gmx.de>

	* Source/gsc/GSGState.m
	New method [currentPoint], gets used in [DPScurrentpoint::].
	Corrected [DPSarc:::::] and [DPSarcn:::::] to draw the arc in user
	space and transfrom it afterwards and implemented  [DPSarct:::::].

2002-08-28 18:55  Alexander Malmberg  <alexander@malmberg.org>

	* Source/x11/XGBitmapImageRep.m, Source/xlib/XGBitmapImageRep.m,
	Source/x11/GNUmakefile, Source/xlib/GNUmakefile: Move
	XGBitmapImageRep.m from xlib/ to x11/.

	* Source/art/ARTContext.m: Remove the copy of the XGBitmapImageRep
	code.

	* Source/art/blit.m: Add missing include of NSDebug.h.

2002-08-28 16:01  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/blit.m (artcontext_setup_draw_info): Change NSLog to
	NSDebugLLog.

2002-08-28 13:29  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ftfont.m: Make the filters used in subpixel rendering
	configurable.

2002-08-28 00:34  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/blit.m: Do basic gamma correction when rendering
	text.

2002-08-27 12:10  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/: Fix copyright notices.

2002-08-27 11:58  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ftfont.m: Add experimental subpixel text renderer.

	* Source/art/blit.h, Source/art/blit.m: Add render_blit_subpixel
	function, used in subpixel rendering.

2002-08-27 10:23  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ARTContext.m, Source/art/composite.m,
	Source/art/GNUmakefile: Move compositing code to its own file.
	Reformat.
	(-_composite_func::::::): Handle the plusl_oo case correctly.
	(-compositerect:op:): Handle inline alpha in the general case.

2002-08-26 16:36  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/image.m: Assume that input isn't premultiplied in
	all cases (to match -xlib behavior, for now). Reformat to fit
	coding standards better.

2002-08-26 15:59  Alexander Malmberg  <alexander@malmberg.org>
